--- a/src/Styles/WorkPreview.scss
+++ b/src/Styles/WorkPreview.scss
@@ -22,6 +22,10 @@
       flex-direction: column;
       margin-top: 0.5rem;
     }
+    .img-container {
+      overflow: hidden;
+      margin: 1rem 1rem;
+    }
     .section1 {
       display: flex;
       flex-direction: column;
@@ -124,10 +128,4 @@
       }
     }
   }
-}
-.img-container {
-  height: 600px;
-
-  overflow: hidden;
-  margin: 1rem 1rem;
 }
